# myRTSPClient

./: .gitmodules  CMakeLists.txt  README.md
myRTSPClient/: CMakeLists.txt
myRTSPClient/inc/: get_nal_unit_type.h  my_media_sink.h  my_rtsp_client.h  stream_client_state.h
myRTSPClient/src/: get_nal_unit_type.cpp  main.cpp  my_media_sink.cpp  my_rtsp_client.cpp
